--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>C++ Samples</title>
 		<link href="http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab" rel="stylesheet" type="text/css">
-		<link href="css/screen.css" rel="stylesheet" type="text/css">
+		<link href="{{ site.baseurl }}css/screen.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<header>
