Link header to index page

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -11,6 +11,10 @@ body {
 body > header {
 	background-color: #6AC05C;
 	color: #fff;
+
+	a {
+		color: #fff;
+	}
 }
 body > header h1 {
 	font-weight: normal;
