--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,7 +11,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="column-3">
-						<h1><span>C++</span>​Samples</h1>
+						<h1><a href="{{ site.baseurl }}"><span>C++</span>​Samples</a></h1>
 						<p>A repository of modern C++ code samples curated by the community.</p>
 					</div>
 				</div>
