Change style of code block to dark

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -75,5 +75,6 @@ code {
 pre code {
 	padding: 16px 24px;
 	display: block;
-	background-color: #e2e2e2;
+	background-color: #2c2c2c;
+	color: #fff;
 }
