Add custom code block tag with line numbers

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -72,9 +72,19 @@ code {
 	font-family: 'Ubuntu Mono';
 }
 
-pre code {
+.codeblock {
 	padding: 16px 24px;
 	display: block;
 	background-color: #2c2c2c;
 	color: #fff;
+
+	.linenums {
+		padding-right: 8px;
+		text-align: right;
+		color: #6b6b6b;
+		border-right: 1px solid #3f3f3f;
+	}
+	.code {
+		padding-left: 16px;
+	}
 }
