--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -21,6 +21,7 @@ body > header {
 body > header h1 {
 	font-weight: normal;
 	font-size: 64px;
+	line-height: 1em;
 	text-transform: lowercase;
 	margin: 0;
 }
