--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -66,7 +66,7 @@ ul {
 }
 
 a {
-	color: #1F9680;
+	color: #9048A0;
 	text-decoration: none;
 }
 
@@ -95,4 +95,31 @@ code {
 
 p {
 	margin-bottom: 1em;
+}
+
+.sample-info {
+	h1 {
+		display: none;
+	}
+
+	h2 {
+		margin-bottom: 6px;
+		text-transform: uppercase;
+		font-size: 12px;
+		color: #666;
+	}
+
+	.contributors {
+		margin-bottom: 14px;
+	
+		li {
+			display: inline-block;
+	
+			a img {
+				border-radius: 50%;
+				width: 36px;
+				height: 36px;
+			}
+		}
+	}
 }
