Add "about" text to footer

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -20,5 +20,13 @@
 		<main class="container">
 {{ content }}
 		</main>
+		<footer class="container">
+			<div class="row">
+				<div class="column-1 about">
+					<img src="http://josephmansfield.uk/images/logo.svg">
+					<p>C++ Samples created by <a href="http://josephmansfield.uk/">Joseph Mansfield</a></p>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
