--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -146,3 +146,24 @@ strong, b {
 		}
 	}
 }
+
+.about {
+	img {
+		float: left;
+		margin-right: 16px;
+		width: 70px;
+	}
+
+	p {
+		margin-top: 16px;
+		text-transform: uppercase;
+		font-size: 12px;
+		color: #666;
+
+		a {
+			display: block;
+			font-size: 17px;
+			text-transform: none;
+		}
+	}
+}
