Add contribution details to footer

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,6 +22,9 @@
 		</main>
 		<footer class="container">
 			<div class="row">
+				<div class="column-2">
+					<p>Feel like <b>contributing</b>? This website is generated from a git repository. If you have something to add or have noticed a mistake, please <a href="#">fork the project on GitHub</a>.</p>
+				</div>
 				<div class="column-1 about">
 					<img src="http://josephmansfield.uk/images/logo.svg">
 					<p>C++ Samples created by <a href="http://josephmansfield.uk/">Joseph Mansfield</a></p>
