--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -18,6 +18,11 @@ body > header {
 		color: #fff;
 	}
 }
+
+body > footer {
+	border-top: 1px solid #d8d8d8;
+}
+
 body > header h1 {
 	font-weight: normal;
 	font-size: 64px;
