--- a/_compass/_syntax.scss
+++ b/_compass/_syntax.scss
@@ -1,6 +1,6 @@
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.highlight .k { color: #64B37D;  } /* Keyword */
+.highlight .k { color: #C3B134;  } /* Keyword */
 .highlight .o {  } /* Operator */
 .highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #6b6b6b; } /* Comment.Preproc */
@@ -24,14 +24,14 @@
 .highlight .kr {  } /* Keyword.Reserved */
 .highlight .kt { color: #54B5F0;  } /* Keyword.Type */
 .highlight .m { color: #009999 } /* Literal.Number */
-.highlight .s { color: #CB6B1A } /* Literal.String */
+.highlight .s { color: #DF8329 } /* Literal.String */
 .highlight .na { color: #008080 } /* Name.Attribute */
-.highlight .nb { color: #0086B3 } /* Name.Builtin */
-.highlight .nc { color: #54B5F0;  } /* Name.Class */
+.highlight .nb { color: #DF8329 } /* Name.Builtin */
+.highlight .nc {  } /* Name.Class */
 .highlight .no { color: #008080 } /* Name.Constant */
 .highlight .ni { color: #800080 } /* Name.Entity */
 .highlight .ne { color: #4288D8;  } /* Name.Exception */
-.highlight .nf { color: #4288D8;  } /* Name.Function */
+.highlight .nf { } /* Name.Function */
 .highlight .nn { color: #555555 } /* Name.Namespace */
 .highlight .nt { color: #000080 } /* Name.Tag */
 .highlight .nv { color: #008080 } /* Name.Variable */
@@ -41,14 +41,14 @@
 .highlight .mh { color: #DF8329 } /* Literal.Number.Hex */
 .highlight .mi { color: #DF8329 } /* Literal.Number.Integer */
 .highlight .mo { color: #DF8329 } /* Literal.Number.Oct */
-.highlight .sb { color: #CB6B1A } /* Literal.String.Backtick */
-.highlight .sc { color: #CB6B1A } /* Literal.String.Char */
-.highlight .sd { color: #CB6B1A } /* Literal.String.Doc */
-.highlight .s2 { color: #CB6B1A } /* Literal.String.Double */
-.highlight .se { color: #CB6B1A } /* Literal.String.Escape */
-.highlight .sh { color: #CB6B1A } /* Literal.String.Heredoc */
-.highlight .si { color: #CB6B1A } /* Literal.String.Interpol */
-.highlight .sx { color: #CB6B1A } /* Literal.String.Other */
+.highlight .sb { color: #DF8329 } /* Literal.String.Backtick */
+.highlight .sc { color: #DF8329 } /* Literal.String.Char */
+.highlight .sd { color: #DF8329 } /* Literal.String.Doc */
+.highlight .s2 { color: #DF8329 } /* Literal.String.Double */
+.highlight .se { color: #91602F } /* Literal.String.Escape */
+.highlight .sh { color: #DF8329 } /* Literal.String.Heredoc */
+.highlight .si { color: #DF8329 } /* Literal.String.Interpol */
+.highlight .sx { color: #DF8329 } /* Literal.String.Other */
 .highlight .sr { color: #009926 } /* Literal.String.Regex */
 .highlight .s1 { color: #CB6B1A } /* Literal.String.Single */
 .highlight .ss { color: #990073 } /* Literal.String.Symbol */
