Shorten site introduction

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 				<div class="row">
 					<div class="column-3">
 						<h1><a href="{{ site.baseurl }}"><span>C++</span>​Samples</a></h1>
-						<p>A repository of modern C++ code samples using only the standard library and curated by the community.</p>
+						<p>A repository of modern C++ code samples curated by the community.</p>
 					</div>
 				</div>
 			</div>
