--- a/_compass/_syntax.scss
+++ b/_compass/_syntax.scss
@@ -2,10 +2,10 @@
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { color: #C3B134;  } /* Keyword */
 .highlight .o {  } /* Operator */
-.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
+.highlight .cm { color: #999988; } /* Comment.Multiline */
 .highlight .cp { color: #6b6b6b; } /* Comment.Preproc */
-.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #6b6b6b; ; font-style: italic } /* Comment.Special */
+.highlight .c1 { color: #999988; } /* Comment.Single */
+.highlight .cs { color: #6b6b6b; } /* Comment.Special */
 .highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
 .highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
 .highlight .ge { font-style: italic } /* Generic.Emph */
