--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -54,24 +54,26 @@ section section h1 {
 	margin-bottom: 16px;
 }
 
-li.sample {
-margin-bottom: 16px;
-}
-li.sample h1 {
-	font-family: 'Roboto';
-	font-size: 17px;
-	border-bottom: none;
-	margin: 0;
-}
-li.sample p {
-	margin: 4px 0;
-	color: #777;
-	font-size: 14px;
-}
-
-ul {
+ul.samples {
 	list-style-type: none;
 	padding: 0;
+
+	li {
+	margin-bottom: 16px;
+	}
+	
+	li h1 {
+		font-family: 'Roboto';
+		font-size: 17px;
+		border-bottom: none;
+		margin: 0;
+	}
+	
+	li p {
+		margin: 4px 0;
+		color: #777;
+		font-size: 14px;
+	}
 }
 
 a {
@@ -138,6 +140,19 @@ strong, b {
 	font-weight: bold;
 }
 
+ul, ol {
+	padding-left: 1.5em;
+	margin-bottom: 1em;
+}
+
+ul {
+	list-style-type: disc;
+}
+
+ol {
+	list-style-type: decimal;
+}
+
 .sample-info {
 	h1 {
 		display: none;
@@ -151,6 +166,7 @@ strong, b {
 	}
 
 	.contributors {
+		padding: 0;
 		margin-bottom: 14px;
 	
 		li {
