--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 		<title>C++ Samples</title>
 		<link href="http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab|Ubuntu+Mono" rel="stylesheet" type="text/css">
 		<link href="{{ site.baseurl }}css/screen.css" rel="stylesheet" type="text/css">
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
 		<header>
@@ -18,6 +19,13 @@
 			</div>
 		</header>
 		<main class="container">
+{% if site.environment == 'production' %}
+			<div class="row">
+				<div class="column-3">
+					<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6789411983750873" data-ad-slot="4105099934" data-ad-format="auto"></ins>
+				</div>
+			</div>
+{% endif %}
 {{ content }}
 		</main>
 		<footer class="container">
@@ -31,5 +39,10 @@
 				</div>
 			</div>
 		</footer>
+		<script>
+adsbygoogle = window.adsbygoogle || [];
+adsbygoogle.push({});
+adsbygoogle.push({});
+		</script>
 	</body>
 </html>
