--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 	<head>
-		<meta charset="utf-8">
 		<title>C++ Samples</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,user-scalable=no">
 		<link href="http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab|Ubuntu+Mono" rel="stylesheet" type="text/css">
 		<link href="{{ site.baseurl }}css/screen.css" rel="stylesheet" type="text/css">
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -11,7 +12,7 @@
 		<header>
 			<div class="container">
 				<div class="row">
-					<div class="column-3">
+					<div class="column-6">
 						<h1><a href="{{ site.baseurl }}"><span>C++</span>​Samples</a></h1>
 						<p>A repository of modern C++ code samples curated by the community.</p>
 					</div>
@@ -21,7 +22,7 @@
 		<main class="container">
 {% if site.environment == 'production' %}
 			<div class="row">
-				<div class="column-3">
+				<div class="column-6">
 					<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6789411983750873" data-ad-slot="4105099934" data-ad-format="auto"></ins>
 				</div>
 			</div>
@@ -30,10 +31,10 @@
 		</main>
 		<footer class="container">
 			<div class="row">
-				<div class="column-2">
+				<div class="column-4">
 					<p>Feel like <b>contributing</b>? This website is generated from a git repository. If you have something to add or have noticed a mistake, please <a href="#">fork the project on GitHub</a>.</p>
 				</div>
-				<div class="column-1 about">
+				<div class="column-2 about">
 					<img src="http://josephmansfield.uk/images/logo.svg">
 					<p>C++ Samples created by <a href="http://josephmansfield.uk/">Joseph Mansfield</a></p>
 				</div>
