Increase line height on section header

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -45,6 +45,7 @@ section h1 {
 	font-family: 'Roboto Slab';
 	font-size: 32px;
 	font-weight: normal;
+	line-height: 1.3em;
 }
 section section h1 {
 	font-family: 'Roboto';
