Fix structure of sample description mark-up

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -150,11 +150,7 @@ ol {
 	list-style-type: decimal;
 }
 
-.sample-info {
-	h1 {
-		display: none;
-	}
-
+.sample {
 	h2 {
 		margin-bottom: 6px;
 		text-transform: uppercase;
