--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		<header>
 			<div class="container">
 				<div class="row">
-					<div class="column-6">
+					<div class="column-4">
 						<h1><a href="{{ site.baseurl }}"><span>C++</span>​Samples</a></h1>
 						<p>A repository of modern C++ code samples curated by the community.</p>
 					</div>
@@ -22,7 +22,7 @@
 		<main class="container">
 {% if site.environment == 'production' %}
 			<div class="row">
-				<div class="column-6">
+				<div class="column-4">
 					<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6789411983750873" data-ad-slot="4105099934" data-ad-format="auto"></ins>
 				</div>
 			</div>
@@ -31,10 +31,10 @@
 		</main>
 		<footer class="container">
 			<div class="row">
-				<div class="column-4">
+				<div class="column-2">
 					<p>Feel like <b>contributing</b>? This website is generated from a git repository. If you have something to add or have noticed a mistake, please <a href="#">fork the project on GitHub</a>.</p>
 				</div>
-				<div class="column-2 about">
+				<div class="column-1 offset-1 about">
 					<img src="http://josephmansfield.uk/images/logo.svg">
 					<p>C++ Samples created by <a href="http://josephmansfield.uk/">Joseph Mansfield</a></p>
 				</div>
