Show sample title in <title>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>C++ Samples</title>
+		<title>{% if page.title %}{{ page.title }} - {% endif %}C++ Samples</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,user-scalable=no">
 		<link href="http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab|Ubuntu+Mono" rel="stylesheet" type="text/css">
