--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -99,7 +99,8 @@ pre {
 
 	.linenums {
 		position: absolute;
-		padding: 16px 8px 16px 12px;
+		margin: 16px 0px 16px 12px;
+		padding-right: 8px;
 		text-align: right;
 		color: #6b6b6b;
 		background-color: #2c2c2c;
@@ -196,5 +197,41 @@ ol {
 			font-size: 17px;
 			text-transform: none;
 		}
+	}
+}
+
+.featured {
+	.codeblock {
+		max-height: 200px;
+		overflow: hidden;
+		position: relative;
+
+		.linenums {
+			margin: 0;
+			display: none;
+		}
+
+		.code {
+			padding-left: 24px;
+		}
+
+		&:before {
+			content: ' ';
+			display: block;
+			position: absolute;
+			width: 100%;
+			height: 200px;
+			background-color: transparent;
+			background: -webkit-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
+			background-image: -moz-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
+			background-image: -o-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
+			background-image: -linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
+			background-image: -ms-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
+		}
+	}
+
+	.lineref {
+		border: none;
+		cursor: default;
 	}
 }
