Correct link to GitHub repo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 		<footer class="container">
 			<div class="row">
 				<div class="column-2">
-					<p>Feel like <b>contributing</b>? This website is generated from a git repository. If you have something to add or have noticed a mistake, please <a href="#">fork the project on GitHub</a>.</p>
+					<p>Feel like <b>contributing</b>? This website is generated from a git repository. If you have something to add or have noticed a mistake, please <a href="https://github.com/sftrabbit/CppSamples-Samples">fork the project on GitHub</a>.</p>
 				</div>
 				<div class="column-1 offset-1 about">
 					<img src="http://josephmansfield.uk/images/logo.svg">
