Add social buttons to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,38 @@
 	<head>
 		<title>{% if page.title %}{{ page.title }} - {% endif %}C++ Samples</title>
 		<meta charset="utf-8">
+		<meta name="description" content="{{ page.description }}">
 		<meta name="viewport" content="width=device-width,user-scalable=no">
 		<link rel="icon" sizes="16x16" type="image/vnd.microsoft.icon" href="/images/icon-16.ico">
 		<link rel="icon" sizes="32x32" type="image/vnd.microsoft.icon" href="/images/icon-32.ico">
 		<link href="http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab|Ubuntu+Mono" rel="stylesheet" type="text/css">
 		<link href="{{ site.baseurl }}css/screen.css" rel="stylesheet" type="text/css">
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+window.fbAsyncInit = function() {
+  FB.init({
+    appId      : '676162015844286',
+    xfbml      : true,
+    version    : 'v2.3'
+  });
+};
+
+(function(d, s, id){
+   var js, fjs = d.getElementsByTagName(s)[0];
+   if (d.getElementById(id)) {return;}
+   js = d.createElement(s); js.id = id;
+   js.src = "//connect.facebook.net/en_US/sdk.js";
+   fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+		</script>
+
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:creator" content="@sftrabbit">
+		<meta property="og:title" content="{% if page.title %}{{ page.title }} - {% endif %}C++ Samples">
+		<meta property="og:site_name" content="C++ Samples">
+		<meta property="og:url" content="http://cppsamples.com/{{ page.url }}">
+		<meta property="og:description" content="{{ page.description }}">
+		<meta property="fb:app_id" content="676162015844286">
 	</head>
 	<body>
 		<header>
@@ -28,6 +54,9 @@
 			<div class="row">
 				<div class="column-2">
 					<p>Feel like <b>contributing</b>? This website is generated from a git repository. If you have something to add or have noticed a mistake, please <a href="https://github.com/sftrabbit/CppSamples-Samples">fork the project on GitHub</a>.</p>
+					<p><div class="fb-like" data-href="http://cppsamples.com/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></p>
+					<p><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://cppsamples.com/" data-text="Modern and idiomatic C++ code from C++ Samples" data-via="sftrabbit" data-dnt="true">Tweet</a></p>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 				</div>
 				<div class="column-1 offset-1 about">
 					<img src="http://josephmansfield.uk/images/logo.svg">
@@ -37,7 +66,6 @@
 		</footer>
 		<script>
 adsbygoogle = window.adsbygoogle || [];
-adsbygoogle.push({});
 adsbygoogle.push({});
 		</script>
 	</body>
