Add social buttons to sample pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@ window.fbAsyncInit = function() {
 		<meta name="twitter:creator" content="@sftrabbit">
 		<meta property="og:title" content="{% if page.title %}{{ page.title }} - {% endif %}C++ Samples">
 		<meta property="og:site_name" content="C++ Samples">
-		<meta property="og:url" content="http://cppsamples.com/{{ page.url }}">
+		<meta property="og:url" content="http://cppsamples.com{{ page.url }}">
 		<meta property="og:description" content="{{ page.description }}">
 		<meta property="fb:app_id" content="676162015844286">
 	</head>
