Use site.baseurl correctly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
 		<meta charset="utf-8">
 		<meta name="description" content="{{ page.description }}">
 		<meta name="viewport" content="width=device-width,user-scalable=no">
-		<link rel="icon" sizes="16x16" type="image/vnd.microsoft.icon" href="/images/icon-16.ico">
-		<link rel="icon" sizes="32x32" type="image/vnd.microsoft.icon" href="/images/icon-32.ico">
+		<link rel="icon" sizes="16x16" type="image/vnd.microsoft.icon" href="{{ site.baseurl }}/images/icon-16.ico">
+		<link rel="icon" sizes="32x32" type="image/vnd.microsoft.icon" href="{{ site.baseurl }}/images/icon-32.ico">
 		<link href="http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab|Ubuntu+Mono" rel="stylesheet" type="text/css">
-		<link href="{{ site.baseurl }}css/screen.css" rel="stylesheet" type="text/css">
+		<link href="{{ site.baseurl }}/css/screen.css" rel="stylesheet" type="text/css">
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<script>
 window.fbAsyncInit = function() {
@@ -32,7 +32,7 @@ window.fbAsyncInit = function() {
 		<meta name="twitter:creator" content="@sftrabbit">
 		<meta property="og:title" content="{% if page.title %}{{ page.title }} - {% endif %}C++ Samples">
 		<meta property="og:site_name" content="C++ Samples">
-		<meta property="og:url" content="http://cppsamples.com{{ page.url }}">
+		<meta property="og:url" content="{{ site.baseurl }}{{ page.url }}">
 		<meta property="og:description" content="{{ page.description }}">
 		<meta property="fb:app_id" content="676162015844286">
 	</head>
@@ -41,7 +41,7 @@ window.fbAsyncInit = function() {
 			<div class="container">
 				<div class="row">
 					<div class="column-4">
-						<h1><a href="{{ site.baseurl }}"><span>C++</span>​Samples</a></h1>
+						<h1><a href="{{ site.baseurl }}/"><span>C++</span>​Samples</a></h1>
 						<p>A repository of modern C++ code samples curated by the community.</p>
 					</div>
 				</div>
@@ -54,8 +54,8 @@ window.fbAsyncInit = function() {
 			<div class="row">
 				<div class="column-2">
 					<p>Feel like <b>contributing</b>? This website is generated from a git repository. If you have something to add or have noticed a mistake, please <a href="https://github.com/sftrabbit/CppSamples-Samples">fork the project on GitHub</a>.</p>
-					<p><div class="fb-like" data-href="http://cppsamples.com/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></p>
-					<p><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://cppsamples.com/" data-text="Modern and idiomatic C++ code from C++ Samples" data-via="sftrabbit" data-dnt="true">Tweet</a></p>
+					<p><div class="fb-like" data-href="{{ site.baseurl }}/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></p>
+					<p><a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.baseurl }}/" data-text="Modern and idiomatic C++ code from C++ Samples" data-via="sftrabbit" data-dnt="true">Tweet</a></p>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 				</div>
 				<div class="column-1 offset-1 about">
