Add canonical link element

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="description" content="{{ page.description }}">
 		<meta name="viewport" content="width=device-width,user-scalable=no">
+		<link rel="canonical" href="{{ site.baseurl }}{% if page.url != '/index.html' %}{{ page.url }}{% endif %}">
 		<link rel="icon" sizes="16x16" type="image/vnd.microsoft.icon" href="{{ site.baseurl }}/images/icon-16.ico">
 		<link rel="icon" sizes="32x32" type="image/vnd.microsoft.icon" href="{{ site.baseurl }}/images/icon-32.ico">
 		<link href="http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab|Ubuntu+Mono" rel="stylesheet" type="text/css">
