--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -235,3 +235,13 @@ ol {
 		cursor: default;
 	}
 }
+
+.disclaimer {
+	padding-bottom: 0;
+
+	p {
+		background-color: #eee;
+		border: 1px solid #888;
+		padding: 16px;
+	}
+}
