Add Google+ share buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
 		<link rel="icon" sizes="32x32" type="image/vnd.microsoft.icon" href="{{ site.baseurl }}/images/icon-32.ico">
 		<link href="http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab|Ubuntu+Mono" rel="stylesheet" type="text/css">
 		<link href="{{ site.baseurl }}/css/screen.css" rel="stylesheet" type="text/css">
+
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script async defer src="https://apis.google.com/js/platform.js"></script>
 
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:creator" content="@sftrabbit">
@@ -46,6 +48,7 @@
 					<p><div class="fb-like" data-href="{{ site.baseurl }}/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></p>
 					<p><a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.baseurl }}/" data-text="Modern and idiomatic C++ code from C++ Samples" data-via="sftrabbit" data-dnt="true">Tweet</a></p>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+					<div class="g-plus" data-action="share" data-annotation="bubble" data-href="http://www.cppsamples.com/"></div>
 				</div>
 				<div class="column-1 offset-1 about">
 					<img src="http://josephmansfield.uk/images/logo.svg">
