Adjust font sizes

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -6,8 +6,8 @@
 
 body {
 	font-family: 'Roboto';
-	font-size: 17px;
-	line-height: 1.3em;
+	font-size: 15px;
+	line-height: 1.4em;
 }
 
 body > header {
@@ -35,7 +35,7 @@ body > header h1 {
 	margin: 0;
 }
 body > header p {
-	margin: 12px 0;
+	margin: 12px 0 0 0;
 }
 body > header h1 span {
 	font-weight: 100;
@@ -43,13 +43,13 @@ body > header h1 span {
 
 section h1 {
 	font-family: 'Roboto Slab';
-	font-size: 32px;
+	font-size: 26px;
 	font-weight: normal;
 	line-height: 1.3em;
 }
 section section h1 {
 	font-family: 'Roboto';
-	font-size: 22px;
+	font-size: 20px;
 	border-left: none;
 	padding: 0;
 	margin-bottom: 16px;
@@ -69,7 +69,7 @@ ul.samples {
 	
 	li h1 {
 		font-family: 'Roboto';
-		font-size: 17px;
+		font-size: 14px;
 		border-bottom: none;
 		margin-bottom: 5px;
 	}
