Add Twitter follow button to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,13 @@
 		<header>
 			<div class="container">
 				<div class="row">
-					<div class="column-4">
+					<div class="column-2">
 						<h1><a href="{{ site.baseurl }}/"><span>C++</span>​Samples</a></h1>
 						<p>A repository of modern C++ code samples curated by the community.</p>
+					</div>
+					<div class="column-1 offset-1">
+						<a href="https://twitter.com/cppsamples" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @cppsamples</a>
+						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 					</div>
 				</div>
 			</div>
