Align index samples corretly

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -5,8 +5,7 @@
 @import 'syntax';
 
 body {
-	font-family: 'Roboto';
-	font-size: 15px;
+	font-family: 'Roboto'; font-size: 15px;
 	line-height: 1.4em;
 }
 
@@ -55,29 +54,38 @@ section section h1 {
 	margin-bottom: 16px;
 }
 
-ul.samples {
-	list-style-type: none;
-	padding: 0;
+.samples-index {
+	.row {
+		padding-bottom: 1em 0;
+	}
 
-	li {
-		margin-bottom: 24px;
+	section .row {
+		padding: 0;
+	}
+
+	.samples-section {
+		margin-bottom: 1em;
+	}
+
+	.index-item {
+		margin-bottom: 2em;
+		
+		h1 {
+			font-family: 'Roboto';
+			font-size: 14px;
+			border-bottom: none;
+			margin-bottom: 5px;
+		}
+		
+		p {
+			margin: 4px 0;
+			font-size: 14px;
+			color: #777;
+		}
 	}
 
 	.tags li {
 		margin-bottom: 2px;
-	}
-	
-	li h1 {
-		font-family: 'Roboto';
-		font-size: 14px;
-		border-bottom: none;
-		margin-bottom: 5px;
-	}
-	
-	li p {
-		margin: 4px 0;
-		font-size: 14px;
-		color: #777;
 	}
 }
 
