Add search input to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,13 +26,12 @@
 		<header>
 			<div class="container">
 				<div class="row">
-					<div class="column-2">
+					<div class="column-1">
 						<h1><a href="{{ site.baseurl }}/"><span>C++</span>​Samples</a></h1>
-						<p>A repository of modern C++ code samples curated by the community.</p>
 					</div>
-					<div class="column-1 offset-1">
-						<a href="https://twitter.com/cppsamples" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @cppsamples</a>
-						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+					<div class="column-2 search">
+						<svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" fit="" style="pointer-events: none; display: block;"><g><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></g></svg>
+						<input id="search">
 					</div>
 				</div>
 			</div>
