--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -10,7 +10,7 @@ body {
 }
 
 body > header {
-	background-color: #4391C8;
+	background-color: #2a90d8;
 	color: #fff;
 
 	a {
@@ -20,6 +20,14 @@ body > header {
 			color: #fff;
 		}
 	}
+
+	.row {
+		padding-bottom: 10px;
+
+		&:first-child {
+			padding-top: 10px;
+		}
+	}
 }
 
 body > footer {
@@ -27,17 +35,42 @@ body > footer {
 }
 
 body > header h1 {
+	margin: 4px 0;
 	font-weight: normal;
-	font-size: 64px;
+	font-size: 32px;
 	line-height: 1em;
 	text-transform: lowercase;
-	margin: 0;
 }
 body > header p {
 	margin: 12px 0 0 0;
 }
 body > header h1 span {
 	font-weight: 100;
+}
+
+.search {
+	position: relative;
+
+	svg {
+		float: left;
+		position: absolute;
+		top: 9px;
+		left: 10px;
+		width: 24px;
+		fill: #fff;
+	}
+
+	input {
+		width: 100%;
+		height: 40px;
+		padding: 0 12px 0 40px;
+		background-color: #4fa6e4;
+		border: 0;
+		border-radius: 2px;
+		outline: 0;
+		color: #fff;
+		font-size: 14px;
+	}
 }
 
 section h1 {
