Hide Twitter link on flow width

--- a/_compass/_layout.scss
+++ b/_compass/_layout.scss
@@ -133,3 +133,9 @@ $size-gutter-width: 45px, 35px, 0px;
 		margin: 0 30px;
 	}
 }
+
+.flow-hide {
+	@media (max-width: upper-limit(flow)) {
+		display: none;
+	}
+}
