--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -163,17 +163,16 @@ section section h1 {
 
 	li {
 		display: inline-block;
-		padding: 2px 3px;
+		padding: 3px 4px;
 		margin: 0 2px 0 0;
 		font-size: 13px;
 		line-height: 1em;
-		color: #587E28;
-		border: 1px solid #587E28;
-		border-radius: 3px;
+		color: #fff;
+		background-color: #73B322;
+		border-radius: 2px;
 
 		&.experimental {
-			color: #d53e3e;
-			border: 1px solid #d53e3e;
+			background-color: #E42727;
 		}
 	}
 }
