--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -331,6 +331,7 @@ ol {
     max-height: 190px;
     overflow: hidden;
     position: relative;
+    text-align: center;
 
     .linenums {
       margin: 0;
@@ -359,5 +360,20 @@ ol {
   .lineref {
     border: none;
     cursor: default;
+  }
+
+  .code-overlay {
+    width: 100%;
+    text-align: center;
+
+    a {
+      position: relative;
+      top: -3em;
+      padding: 6px 10px;
+      background-color: #424242;
+      border-radius: 2px;
+      color: #fff;
+      box-shadow: 0px 0px 12px 2px #222;
+    }
   }
 }
