--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -1,3 +1,4 @@
+@import "compass";
 @import "compass/reset";
 @import "compass/utilities/general/clearfix";
 
@@ -328,7 +329,7 @@ ol {
 
 .featured {
   .codeblock {
-    max-height: 190px;
+    max-height: 230px;
     overflow: hidden;
     position: relative;
     text-align: center;
@@ -347,13 +348,9 @@ ol {
       display: block;
       position: absolute;
       width: 100%;
-      height: 190px;
+      height: 230px;
       background-color: transparent;
-      background: -webkit-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
-      background-image: -moz-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
-      background-image: -o-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
-      background-image: -linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
-      background-image: -ms-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
+      @include background-image(linear-gradient(rgba(44, 44, 44, 0) 60%, rgba(44, 44, 44, 1) 98%));
     }
   }
 
