--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1,8 +1,8 @@
-@import "compass";
-@import "compass/reset";
-@import "compass/utilities/general/clearfix";
+---
+---
 
 @import 'layout';
+@import 'reset';
 @import 'syntax';
 
 body {
@@ -341,6 +341,7 @@ ol {
 
     .code {
       padding-left: 24px;
+      text-align: left;
     }
 
     &:before {
@@ -350,7 +351,7 @@ ol {
       width: 100%;
       height: 230px;
       background-color: transparent;
-      @include background-image(linear-gradient(rgba(44, 44, 44, 0) 60%, rgba(44, 44, 44, 1) 98%));
+      background-image: linear-gradient(rgba(44, 44, 44, 0) 60%, rgba(44, 44, 44, 1) 98%);
     }
   }
 
