--- a/css/screen.scss
+++ b/css/screen.scss
@@ -153,7 +153,7 @@ section section h1 {
     }
   }
 
-  .tags li {
+  .min-spec span {
     margin-bottom: 2px;
   }
 }
@@ -162,27 +162,37 @@ section section h1 {
   display: none;
 }
 
-.tags {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+.min-spec {
+  color: #c3c3c3;
+}
 
-  li {
-    display: inline-block;
-    margin: 0 2px 0 0;
-    background-color: #73B322;
-    border-radius: 2px;
+.tag {
+  display: inline-block;
+  margin: 0 2px 0 0;
+  background-color: #c3c5c0;
+  border-radius: 2px;
 
-    &.experimental {
-      background-color: #E42727;
-    }
+  &.experimental {
+    background-color: #d24848;
+  }
 
-    a {
-      padding: 3px 4px;
-      color: #fff;
-      font-size: 13px;
-      line-height: 1em;
-    }
+  &.c\+\+17 {
+    background-color: #73b322;
+  }
+
+  &.c\+\+14 {
+    background-color: #97c751;
+  }
+
+  &.c\+\+11 {
+    background-color: #b5d488;
+  }
+
+  a {
+    padding: 3px 4px;
+    color: #fff;
+    font-size: 13px;
+    line-height: 1em;
   }
 }
 
@@ -277,7 +287,7 @@ ol {
     color: #666;
   }
 
-  .tags {
+  .min-spec {
     margin-bottom: 13px;
   }
 
