--- a/css/screen.scss
+++ b/css/screen.scss
@@ -291,6 +291,18 @@ ol {
     margin-bottom: 13px;
   }
 
+  .specs {
+    display: inline-block;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      display: inline-block;
+      margin-left: 2px;
+    }
+  }
+
   .contributors {
     padding: 0;
     margin-bottom: 14px;
